03-todo-web-application-mysql/todo-web-app-network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: todo-web-app-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/todo-web-app-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/todo-web-app-network: "true"
